# tf-gnn-samples

./: pyproject.toml
gnns/: rgat.py
models/: sparse_graph_model.py
notebook/: test01.ipynb
tasks/: sparse_graph_task.py
utils/: utils.py
